--- a/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
@@ -55,51 +55,129 @@
             >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto"/>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <Button
-                Grid.Column="2"
-                Margin="2,0,2,0"
-                Width="0"
-                IsEnabled="True"
-                x:Name="ForegroundButton"
-                />
-
-            <Button
+            <StackPanel
                 Grid.Column="0"
-                Margin="2"
-                Content="{x:Static resources:Resources.UI_OpenInEditor}"
-                Command="{Binding OpenInEditorCommand}"
-                />
-            <Button
-                Grid.Column="1"
-                Margin="2"
-                Content="{x:Static resources:Resources.UI_RemoveChat}"
-                Command="{Binding RemoveCommand}"
-                />
-            <Button
-                Grid.Column="2"
-                Margin="2"
-                Content="{x:Static resources:Resources.UI_StopWaiting}"
-                Command="{Binding StopCommand}"
-                />
+                Orientation="Horizontal"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                >
+                
+                <Button
+                    Margin="0"
+                    Width="0"
+                    Height="0"
+                    IsEnabled="True"
+                    Visibility="Collapsed"
+                    x:Name="ForegroundButton"
+                    />
 
-            <Button
+                <Label
+                    Margin="5,2,5,2"
+                    Content="{x:Static resources:Resources.UI_OpenInEditor}"
+                    VerticalAlignment="Center"
+                    Background="Transparent"
+                    Foreground="#569CD6"
+                    Cursor="Hand"
+                    FontFamily="Cascadia Code"
+                    >
+                    <Label.InputBindings>
+                        <MouseBinding
+                            Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.OpenInEditorCommand}"
+                            MouseAction="LeftClick"
+                            />
+                    </Label.InputBindings>
+                </Label>
+
+                <Label
+                    Margin="5,2,5,2"
+                    Content="{x:Static resources:Resources.UI_RemoveChat}"
+                    VerticalAlignment="Center"
+                    Background="Transparent"
+                    Foreground="#569CD6"
+                    Cursor="Hand"
+                    FontFamily="Cascadia Code"
+                    >
+                    <Label.InputBindings>
+                        <MouseBinding
+                            Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.RemoveCommand}"
+                            MouseAction="LeftClick"
+                            />
+                    </Label.InputBindings>
+                </Label>
+
+                <Label
+                    Margin="5,2,5,2"
+                    Content="{x:Static resources:Resources.UI_StopWaiting}"
+                    VerticalAlignment="Center"
+                    Background="Transparent"
+                    Foreground="#569CD6"
+                    Cursor="Hand"
+                    FontFamily="Cascadia Code"
+                    >
+                    <Label.InputBindings>
+                        <MouseBinding
+                            Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StopCommand}"
+                            MouseAction="LeftClick"
+                            />
+                    </Label.InputBindings>
+                </Label>
+
+            </StackPanel>
+
+            <StackPanel
                 Grid.Column="3"
-                Margin="2"
-                Content="{x:Static resources:Resources.UI_StartDiscussion}"
+                Orientation="Horizontal"
                 HorizontalAlignment="Right"
-                Command="{Binding StartDiscussionCommand}"
-                />
+                VerticalAlignment="Center"
+                >
+
+                <Label
+                    Margin="5,2,5,2"
+                    Content="Edit tools..."
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Foreground="#569CD6"
+                    Cursor="Hand"
+                    FontFamily="Cascadia Code"
+                    ToolTip="Edit available model context protocol tools"
+                    >
+                    <Label.InputBindings>
+                        <MouseBinding
+                            Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.EditAvailableToolsCommand}"
+                            MouseAction="LeftClick"
+                            />
+                    </Label.InputBindings>
+                </Label>
+
+                <Label
+                    Margin="5,2,5,2"
+                    Content="{x:Static resources:Resources.UI_StartDiscussion}"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Background="Transparent"
+                    Foreground="#569CD6"
+                    Cursor="Hand"
+                    FontFamily="Cascadia Code"
+                    >
+                    <Label.InputBindings>
+                        <MouseBinding
+                            Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StartDiscussionCommand}"
+                            MouseAction="LeftClick"
+                            />
+                    </Label.InputBindings>
+                </Label>
+
+            </StackPanel>
+            
         </Grid>
 
         <ListBox
             Grid.Row="1"
             Grid.Column="0"
-            Margin="2"
+            Margin="0"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
             ItemsSource="{Binding Path=ChatList}"
@@ -136,6 +214,7 @@
             Grid.Column="1"
             ResizeDirection="Columns"
             Width="2"
+            Margin="2,0,2,0"
             VerticalAlignment="Stretch"
             HorizontalAlignment="Center"
             />
@@ -185,22 +264,6 @@
                             HorizontalAlignment="Right"
                             VerticalAlignment="Bottom"
                             >
-
-                            <Label
-                                Margin="5,0,5,0"
-                                Content="Edit tools..."
-                                Foreground="#569CD6"
-                                Cursor="Hand"
-                                FontFamily="Cascadia Code"
-                                ToolTip="Edit available model context protocol tools"
-                                >
-                                <Label.InputBindings>
-                                    <MouseBinding
-                                        Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.EditAvailableToolsCommand}"
-                                        MouseAction="LeftClick"
-                                        />
-                                </Label.InputBindings>
-                            </Label>
 
                             <Label
                                 Margin="5,0,5,0"
