--- a/FreeAIr/UI/ToolWindows/NaturalLanguageResultsToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/NaturalLanguageResultsToolWindowControl.xaml
@@ -16,7 +16,7 @@
     >
     <!-- toolkit:Themes.UseVsTheme="True" -->
     <UserControl.Resources>
-        <DoubleCollection x:Key="Proportions">3,14,1,1,1</DoubleCollection>
+        <DoubleCollection x:Key="Proportions">3,14,2,1</DoubleCollection>
     </UserControl.Resources>
 
     <Grid>
@@ -35,19 +35,40 @@
 
             <Label
                 Grid.Column="0"
+                Margin="5,0,5,0"
                 HorizontalAlignment="Left"
-                Foreground="{Binding ElementName=CancelButtonName, Path=Foreground}"
+                Foreground="{Binding ElementName=StyleButtonName, Path=Foreground}"
                 Content="{Binding Status}"
                 />
 
             <Button
                 Grid.Column="1"
-                x:Name="CancelButtonName"
+                Width="0"
+                Visibility="Collapsed"
+                x:Name="StyleButtonName"
                 HorizontalAlignment="Right"
+                VerticalAlignment="Center"
                 Content="Cancel chat"
                 toolkit:Themes.UseVsTheme="True"
-                Command="{Binding CancelChatCommand}"
                 />
+            <Label
+                Grid.Column="1"
+                HorizontalAlignment="Right"
+                Margin="5,0,5,0"
+                Content="Cancel chat"
+                VerticalAlignment="Center"
+                Background="Transparent"
+                Foreground="#569CD6"
+                Cursor="Hand"
+                >
+                <Label.InputBindings>
+                    <MouseBinding
+                        Command="{Binding ElementName=NaturaLanguageResultsName, Path=DataContext.CancelChatCommand}"
+                        CommandParameter="{Binding}"
+                        MouseAction="LeftClick"
+                        />
+                </Label.InputBindings>
+            </Label>
 
         </Grid>
         
@@ -196,38 +217,25 @@
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
 
+                        <GridViewColumn Header="Confidence" Width="70">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Label
+                                        HorizontalAlignment="Center"
+                                        Content="{Binding ConfidenceLevel}"
+                                        Background="Transparent"
+                                        Foreground="White"
+                                        />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+
                         <GridViewColumn Header="Line" Width="60">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <Label
                                         HorizontalAlignment="Center"
                                         Content="{Binding LineIndex}"
-                                        Background="Transparent"
-                                        Foreground="White"
-                                        />
-                                </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                        </GridViewColumn>
-
-                        <GridViewColumn Header="Column" Width="60">
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate>
-                                    <Label
-                                        HorizontalAlignment="Center"
-                                        Content="{Binding ColumnIndex}"
-                                        Background="Transparent"
-                                        Foreground="White"
-                                        />
-                                </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                        </GridViewColumn>
-
-                        <GridViewColumn Header="Offset" Width="60">
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate>
-                                    <Label
-                                        HorizontalAlignment="Center"
-                                        Content="{Binding OffsetIndex}"
                                         Background="Transparent"
                                         Foreground="White"
                                         />
