--- a/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
@@ -25,6 +25,8 @@
     IsVisibleChanged="ChatListToolWindow_IsVisibleChanged"
     >
     <UserControl.Resources>
+        <ui:InvertBooleanToVisibilityConverter  x:Key="StopCommandVisibilityConverter" />
+
         <!-- Прокси для передачи контекста в ContextMenu -->
         <toolwindows:BindingProxy x:Key="DataContextProxy" Data="{Binding}" />
         <toolwindows:BindingProxy x:Key="ForegroundButtonProxy" Data="{Binding ElementName=ForegroundButton}" />
@@ -75,8 +77,9 @@
                     />
 
                 <Label
-                    Margin="5,2,5,2"
-                    Content="{x:Static resources:Resources.UI_OpenInEditor}"
+                    Margin="0,2,5,2"
+                    Content="{x:Static resources:Resources.UI_StartDiscussion}"
+                    HorizontalAlignment="Right"
                     VerticalAlignment="Center"
                     Background="Transparent"
                     Foreground="#569CD6"
@@ -85,7 +88,7 @@
                     >
                     <Label.InputBindings>
                         <MouseBinding
-                            Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.OpenInEditorCommand}"
+                            Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StartChatCommand}"
                             MouseAction="LeftClick"
                             />
                     </Label.InputBindings>
@@ -108,23 +111,6 @@
                     </Label.InputBindings>
                 </Label>
 
-                <Label
-                    Margin="5,2,5,2"
-                    Content="{x:Static resources:Resources.UI_StopWaiting}"
-                    VerticalAlignment="Center"
-                    Background="Transparent"
-                    Foreground="#569CD6"
-                    Cursor="Hand"
-                    FontFamily="Cascadia Code"
-                    >
-                    <Label.InputBindings>
-                        <MouseBinding
-                            Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StopCommand}"
-                            MouseAction="LeftClick"
-                            />
-                    </Label.InputBindings>
-                </Label>
-
             </StackPanel>
 
             <StackPanel
@@ -135,7 +121,7 @@
                 >
 
                 <Label
-                    Margin="5,2,5,2"
+                    Margin="5,2,0,2"
                     Content="Edit tools..."
                     HorizontalAlignment="Right"
                     VerticalAlignment="Center"
@@ -152,24 +138,6 @@
                     </Label.InputBindings>
                 </Label>
 
-                <Label
-                    Margin="5,2,5,2"
-                    Content="{x:Static resources:Resources.UI_StartDiscussion}"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Center"
-                    Background="Transparent"
-                    Foreground="#569CD6"
-                    Cursor="Hand"
-                    FontFamily="Cascadia Code"
-                    >
-                    <Label.InputBindings>
-                        <MouseBinding
-                            Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StartChatCommand}"
-                            MouseAction="LeftClick"
-                            />
-                    </Label.InputBindings>
-                </Label>
-
             </StackPanel>
             
         </Grid>
@@ -179,6 +147,7 @@
             Grid.Column="0"
             Margin="0"
             HorizontalAlignment="Stretch"
+            HorizontalContentAlignment="Stretch"
             VerticalAlignment="Stretch"
             ItemsSource="{Binding Path=ChatList}"
             SelectedItem="{Binding Path=SelectedChat}"
@@ -187,22 +156,24 @@
             >
             <ListBox.ItemTemplate>
                 <DataTemplate>
+
                     <StackPanel
                         >
-                        <StackPanel.InputBindings>
-                            <MouseBinding Gesture="LeftDoubleClick" Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.OpenInEditorCommand}"/>
-                        </StackPanel.InputBindings>
                         <TextBlock
+                            Margin="0,1,0,1"
                             Text="{Binding Path=FirstRow, Mode=OneWay}"
                             />
                         <TextBlock
                             Text="{Binding Path=SecondRow, Mode=OneWay}"
                             />
                         <TextBlock
+                            Margin="0,1,0,1"
                             Text="{Binding Path=ThirdRow, Mode=OneWay}"
                             />
                         <StackPanel
-                            Orientation="Horizontal">
+                            Orientation="Horizontal"
+                            Margin="0,1,0,1"
+                            >
                             <imaging:CrispImage
                                 Margin="0"
                                 Moniker="{Binding StatusMoniker}"
@@ -212,6 +183,51 @@
                                 Text="{Binding Path=FourthRow, Mode=OneWay}"
                                 />
                         </StackPanel>
+                        <Grid
+                            HorizontalAlignment="Stretch"
+                            Margin="0,1,0,1"
+                            >
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock
+                                Grid.Column="0"
+                                Margin="0,0,2,0"
+                                Text="{x:Static resources:Resources.UI_OpenInEditor}"
+                                HorizontalAlignment="Left"
+                                Background="Transparent"
+                                Foreground="#569CD6"
+                                Cursor="Hand"
+                                >
+                                <TextBlock.InputBindings>
+                                    <MouseBinding
+                                        Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.OpenInEditorCommand}"
+                                        CommandParameter="{Binding}"
+                                        MouseAction="LeftClick"
+                                        />
+                                </TextBlock.InputBindings>
+                            </TextBlock>
+                            <TextBlock
+                                Grid.Column="1"
+                                Margin="2,0,0,0"
+                                Text="{x:Static resources:Resources.UI_StopWaiting}"
+                                HorizontalAlignment="Right"
+                                Background="Transparent"
+                                Foreground="#569CD6"
+                                Cursor="Hand"
+                                >
+                                <TextBlock.InputBindings>
+                                    <MouseBinding
+                                        Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StopCommand}"
+                                        CommandParameter="{Binding}"
+                                        MouseAction="LeftClick"
+                                        />
+                                </TextBlock.InputBindings>
+                            </TextBlock>
+                        </Grid>
+
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
@@ -783,6 +799,36 @@
                 HorizontalAlignment="Stretch"
                 />
 
+            <imaging:CrispImage
+                Grid.Row="3"
+                Margin="2,5,2,2"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                IsHitTestVisible="False"
+                Moniker="{Binding StatusMoniker}"
+                />
+
+            <Label
+                Grid.Row="3"
+                Margin="5,2,5,2"
+                Content="{x:Static resources:Resources.UI_StopWaiting}"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Background="Transparent"
+                Foreground="#569CD6"
+                Cursor="Hand"
+                FontFamily="Cascadia Code"
+                Visibility="{Binding ElementName=ChatListToolWindow, Path=DataContext.IsReadyToAcceptNewPrompt, Converter={StaticResource StopCommandVisibilityConverter}}"
+                >
+                <Label.InputBindings>
+                    <MouseBinding
+                        Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StopCommand}"
+                        CommandParameter="{Binding ElementName=ChatListToolWindow, Path=DataContext.SelectedChat}"
+                        MouseAction="LeftClick"
+                        />
+                </Label.InputBindings>
+            </Label>
+
             <embedillo:EmbedilloControl
                 Grid.Row="3"
                 Margin="2,2,2,2"
@@ -797,26 +843,6 @@
                 ControlEnabled="{Binding IsReadyToAcceptNewPrompt}"
                 >
             </embedillo:EmbedilloControl>
-
-            <StackPanel
-                Grid.Row="3"
-                Margin="2,5,2,2"
-                Orientation="Horizontal"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Top"
-                IsHitTestVisible="False"
-                >
-                <imaging:CrispImage
-                    Moniker="{x:Static catalog:KnownMonikers.NeuralNetwork}"
-                    IsHitTestVisible="False"
-                    />
-                <imaging:CrispImage
-                    Margin="4,0,0,0"
-                    Moniker="{Binding StatusMoniker}"
-                    IsHitTestVisible="False"
-                    />
-            </StackPanel>
-
 
         </Grid>
 
